# rasterix

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  pixi.toml  pyproject.toml  rasterize.py  test_rasterize.py
.github/workflows/: release.yml  test.yml
design_notes/: raster_index.md
docs/: api.rst  conf.py  heuristics.md  index.md
docs/_static/: style.css
docs/data/: S_20240101_concentration_v4.0.tif
docs/examples/: line-zonal-stats.ipynb
docs/raster_index/: aligning.md  combining.md  creating.md  crs.ipynb  design_choices.md  heuristics.md  indexing.ipynb  intro.ipynb  tolerance.md
docs/rasterize/: exactextract.ipynb  geometry_mask.ipynb  overview.md  rasterio.ipynb  rusterize.ipynb
notebooks/: examples.ipynb  raster_index.ipynb  test_raster_index.ipynb  xproj_integration.ipynb
rasterix/: __init__.py  raster_index.py
src/rasterix/: __init__.py  lib.py  odc_compat.py  options.py  raster_index.py  rasterize.py  rioxarray_compat.py  strategies.py  utils.py
src/rasterix/rasterize/: __init__.py  core.py  exact.py  rasterio.py  rusterize.py  utils.py
tests/: conftest.py  geometry_mask_snapshot.nc  geometry_mask_snapshot_all_touched.nc  geometry_mask_snapshot_rusterize.nc  rasterize_snapshot.nc  rasterize_snapshot_all_touched.nc  rasterize_snapshot_clipped.nc  rasterize_snapshot_exactextract.nc  rasterize_snapshot_rusterize.nc  test_exact.py  test_indexing.py  test_options.py  test_raster_index.py  test_rasterize.py
