[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/notebooks"
]

[project]
name = "rasterix"
description = "Raster extensions for Xarray"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["xarray"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "affine",
    "pandas>=2",
    "numpy>=2",
    "xproj>=0.2.0",
    "xarray>=2025",
]
dynamic=["version"]

[project.optional-dependencies]
dask = ["dask-geopandas"]
rasterize = ["rasterio"]
rusterize = ["rusterize"]
exactextract = ["exactextract", "sparse"]
docs = [
  "geodatasets",
  "pooch",
  "dask-geopandas",
  "rasterio",
  "rusterize",
  "rioxarray",
  "exactextract",
  "sparse",
  "netCDF4",
  # Doc building
  'sphinx',
  'sphinx-autoapi',
  'sphinx-autobuild>=2021.3.14',
  'sphinx-copybutton',
  'sphinx-remove-toctrees',
  'sphinx-codeautolink',
  'myst-parser',
  'myst-nb',
  'furo',
  'numpydoc',
  'sphinxext-opengraph[social_cards]',
  'xvec',
]

[tool.hatch]
version.source = "vcs"

[tool.hatch.build]
hooks.vcs.version-file = "src/rasterix/_version.py"

[tool.uv]
constraint-dependencies = ["numpy<2.4"]

[tool.ruff]
line-length = 110
target-version = "py310"
builtins = ["ellipsis"]
exclude = [
    ".eggs",
    "doc",
]

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    # Bugbear
    # "B",
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["rasterix"]
known-third-party = [
    "xarray"
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "--tb=short"
minversion = "7"
testpaths = ["tests"]

[tool.codespell]
ignore-words-list = "nd,nax,coo"
skip = "*.html,pixi.lock"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
namespace_packages = false
